[package]
name = "tvc_tracker"
version = "0.1.0"
edition = "2024"
authors = ["Blocksize Capital <dev@blocksize-capital.com>"]
description = "A Prometheus exporter for monitoring Solana validator Timely Vote Credits (TVC)"
license = "MIT"
repository = "https://github.com/Blocksize-Capital-GmbH/tvc_tracker"
keywords = ["solana", "validator", "prometheus", "monitoring", "tvc"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
axum = "0.7"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "0.4"
