[package]
name = "tvc_tracker"
version = "0.6.0"
edition = "2024"
authors = ["Axel Lode <al@blocksize-capital.com>"]
description = "A Prometheus exporter for monitoring Solana validator Timely Vote Credits (TVC)"
license = "MIT"
repository = "https://github.com/Blocksize-Capital-GmbH/tvc_tracker"
keywords = ["solana", "validator", "prometheus", "monitoring", "tvc"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
prometheus = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = ">=0.3.47"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio-test = "0.4"
